--- a/front/Front3DePrint/src/app/profile/profile.component.html
+++ b/front/Front3DePrint/src/app/profile/profile.component.html
@@ -7,16 +7,17 @@
   </header>
 
     <div class="raw">
-      <div>prénom : {{user.firstname}}</div>
-      <div>nom : {{user.lastname}}</div>
-      <div>mail : {{user.email}}</div>
+      <div>Prénom : {{user.firstname}}</div>
+      <div>Nom : {{user.lastname}}</div>
+      <div>Mail : {{user.email}}</div>
     </div>
     <div class="raw">
     <h4>Adresse</h4>
       <div class="raw">
-        <div>num : {{user.address.num}}</div>
-        <div>rue : {{user.address.street}}</div>
-        <div>ville : {{user.address.town}}</div>
+        <div>N° : {{user.address.num}}</div>
+        <div>Rue : {{user.address.street}}</div>
+        <div>Ville : {{user.address.town}}</div>
+        <div>Code Postal : {{user.address.postal}}</div>
         <div>pays : {{user.address.country}}</div>
       </div> 
     </div> 
