--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -16,7 +16,7 @@
         <a href="/user" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="user" routerLinkActive="active"><i class="fa fa-eye fa-2x"></i></a>
       </li>
       <li class="nav-item">
-        <a href="/profile" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="profile" routerLinkActive="active"><i class="fa fa-id-card-o fa-2x"></i> {{ username }}</a>
+        <a href="/profile" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="profile" routerLinkActive="active"><i class="fa fa-id-card-o fa-2x"></i></a>
       </li>
        <li class="nav-item">
         <a href="/users" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="users"><i class="fa fa-user fa-2x"></i></a>
@@ -31,19 +31,19 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
       <li class="nav-item">
-        <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
+        <a href="/register" class="nav-link" routerLink="register"><i class="fa fa-sign-in" aria-hidden="true"></i> Créer un compte</a>
       </li>
       <li class="nav-item">
-        <a href="/login" class="nav-link" routerLink="login">Login</a>
+        <a href="/login" class="nav-link" routerLink="login"><i class="fa fa-user" aria-hidden="true"></i> Se connecter</a>
       </li>
     </ul>
 
     <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
       <li class="nav-item">
-        <a href="/profile" class="nav-link" routerLink="profile">Welcome {{ username }}</a>
+        <a href="/profile" class="nav-link" routerLink="profile">Bienvenue {{ username }}</a>
       </li>
       <li class="nav-item">
-        <a href class="nav-link" (click)="logout()">LogOut</a>
+        <a href class="nav-link" (click)="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
       </li>
     </ul>
   </nav>
