--- a/front/Front3DePrint/src/app/details/details.component.html
+++ b/front/Front3DePrint/src/app/details/details.component.html
@@ -1,9 +1,10 @@
-<p>username : {{user.username}}</p>
-<p>prénom : {{user.firstname}}</p>
-<p>nom : {{user.lastname}}</p>
-<p>mail : {{user.email}}</p>
-<p>num : {{address.num}}</p>
-<p>rue : {{address.street}}</p>
-<p>ville : {{address.town}}</p>
-<p>pays : {{address.country}}</p>
+<p>Username : {{user.username}}</p>
+<p>Prénom : {{user.firstname}}</p>
+<p>Nom : {{user.lastname}}</p>
+<p>Mail : {{user.email}}</p>
+<p>N° : {{address.num}}</p>
+<p>Rue : {{address.street}}</p>
+<p>Ville : {{address.town}}</p>
+<p>Code Postal : {{address.postal}}</p>
+<p>Pays : {{address.country}}</p>
 <button (click)="backToUserlist()" class="btn btn-info" style="margin-left: 10px">Retour</button>
