--- a/front/Front3DePrint/src/app/files/list-files/list-files.component.html
+++ b/front/Front3DePrint/src/app/files/list-files/list-files.component.html
@@ -13,7 +13,7 @@
         </li>
         <li *ngIf="role" class="list-group-item">
 
-          <p>image : {{ image.name }}, proprietaire : {{image.ownerName}}, quantité à imprimer : {{image.quantity}}
+          <p>image : {{ image.name }}, proprietaire : {{image.ownerName}}, <span>Quantité à imprimer</span> : {{image.quantity}}
 
           <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">ouvrir</button>
           </p>
@@ -29,7 +29,7 @@
         </li>
         <li *ngIf="role" class="list-group-item">
 
-          <p>Proprietaire : {{image.ownerName}}, image : {{ image.name }}, quantité à imprimer : {{image.quantity}}
+          <p>Proprietaire : {{image.ownerName}}, image : {{ image.name }}, <span>Quantité à imprimer</span> : {{image.quantity}}
 
           <button (click) = "imageDetail(image.id)" class="btn btn-info float-right" style="margin-left: 10px">ouvrir</button>
           </p>
@@ -43,20 +43,21 @@
 
       <ul class="list-group list-group-flush" *ngFor="let image of imageCs">
         <li *ngIf="!role" class="list-group-item">
-          <p>{{ image.name }} 
-          quantité à imprimer : {{ image.quantity}}
+          <p>{{ image.name }},  
+          <span>Quantité à imprimer</span> : <span>{{ image.quantity}}</span>
           </p>
-          <button (click) = "annulChoise(image.id)" class="btn btn-info float-right" style="margin-left: 10px">Annuler</button>
-        </li>
+          <button (click) = "validation(image.id)" class="btn btn-success float-right" style="margin-left: 10px"><i class="fa fa-check"></i></button>
+          <button (click) = "annulChoise(image.id)" class="btn btn-info float-right" style="margin-left: 10px"><i class="fa fa-undo"></i></button>
+          </li>
         <li *ngIf="role" class="list-group-item">
 
-          <p>image : {{ image.name }}, proprietaire : {{image.ownerName}}, quantité à imprimer : {{image.quantity}}
+          <p>image : {{ image.name }}, proprietaire : {{image.ownerName}}, <span>Quantité à imprimer</span> : {{image.quantity}}
 
           <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">ouvrir</button>
           </p>
         </li>
       </ul>
     </div>
-    <button (click) = "validation()" class="btn btn-success float-right" style="margin-left: 10px">Optenir un devis (réponse sous 24 h dans votre espace privé : <i class="fa fa-eye">)</i></button>
+    
   </div>
 </div>
