--- a/front/Front3DePrint/src/app/user-update/user-update.component.html
+++ b/front/Front3DePrint/src/app/user-update/user-update.component.html
@@ -4,23 +4,28 @@
   <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
   	
     <div class="form-group">
-      <label for="num">Numéro de rue:</label>
+      <label for="num">Numéro de rue :</label>
       <input type="number" formControlName="num" placeholder="{{address.num}}" [(ngModel)]="address.num" name="num" class="form-control" id="num">
     </div>
 
     <div class="form-group">
       <label for="street">Type de voie :</label>
-      <input formControlName="street" placeholder="{{address.street}}" [(ngModel)]="address.street" name="street" class="form-control" id="street">
+      <input type="text" formControlName="street" placeholder="{{address.street}}" [(ngModel)]="address.street" name="street" class="form-control" id="street">
     </div>
 
     <div class="form-group">
-      <label for="town">Ville:</label>
-      <input formControlName="town" placeholder="{{address.town}}" [(ngModel)]="address.town" name="town" class="form-control" id="town">
+      <label for="town">Ville :</label>
+      <input type="text" formControlName="town" placeholder="{{address.town}}" [(ngModel)]="address.town" name="town" class="form-control" id="town">
     </div>
 
     <div class="form-group">
-      <label for="country">Pays:</label>
-      <input formControlName="country" placeholder="{{address.country}}" [(ngModel)]="address.country" name="country" class="form-control" id="country">
+      <label for="postal">Code postal :</label>
+      <input type="text" max="5" formControlName="postal" placeholder="{{address.postal}}" [(ngModel)]="address.postal" name="postal" class="form-control" id="postal">
+    </div>
+
+    <div class="form-group">
+      <label for="country">Pays :</label>
+      <input type="text" formControlName="country" placeholder="{{address.country}}" [(ngModel)]="address.country" name="country" class="form-control" id="country">
     </div>
 
     <button class="btn btn-success">Mettre à jour</button>
