--- a/front/Front3DePrint/src/app/home/home.component.html
+++ b/front/Front3DePrint/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<div class="container">
-
-</div>
+<figure class="figure">
+  <img src="../assets/images/artillery.jpg" style ="width: 30%" class="figure-img img-fluid rounded float-left" alt="imprimante 3D Artillery Sidewinder X1">
+</figure>
+<figure class="figure">
+  <img src="../assets/images/lablists.jpg" style ="width: 30%" class="figure-img img-fluid rounded float-right" alt="imprimante 3D Lablists">
+</figure>
