--- a/front/Front3DePrint/src/styles.css
+++ b/front/Front3DePrint/src/styles.css
@@ -8,4 +8,7 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-image: url("./assets/images/backgroundna.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
