--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="role" class="card">
+<div class="card">
   <div class="card-header">Nom de image : {{ imageName }}</div>
   <button class="badge badge-danger mr-2 d-inline p-2" (click)="deleteFile(imageId)">Supprimer l'image (définitivement)  </button>
     <li class="list-group-item" >
@@ -6,7 +6,7 @@
       <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour aux images</button>
     </li>
   </div>
-  <div *ngIf="role" >
+  <div>
     <div class="col-md-6 user-container">
       <h2 class="text-center">Choisir la quantité d'objet à imprimer : </h2>
       <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
@@ -20,16 +20,4 @@
     </div>
 
   </div>
-  <div *ngIf="!role">
-  
-    <div>
-      <p>Saisir les données :</p>
-      <div>
-        <p>prix de la pièce : </p>
-        <p>Quantité : </p>
-        <p>Prix total : </p>
-      </div>  
-    </div>
-    <button class="badge badge-success mr-2" (click)="toQuote()">Enregistrer pour devis</button>
-  </div>
-
+ 
