--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
@@ -3,10 +3,13 @@
   <div class="col-sm-10"><div class="card">
 
     <div class="card-header">Liste des images à imprimer</div>
-      <ul class="list-group list-group-flush" *ngFor="let image of images">
+      <ul class="list-group list-group-flush" *ngFor="let image of images;let i=index">
         <li class="list-group-item">
-
-          <p>Proprietaire : {{image.ownerName}}, image : {{ image.name }}, <span>Quantité à imprimer</span> : {{image.quantity}}, date : {{ image.date}}
+          <p class="owner" *ngIf="i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName"> Client(id : {{image.userId}}) : 
+          {{i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName}}</p>
+          <p> image : {{i>0 && images[i-1].name==image.name?'':image.name}}</p>
+          <p>Quantité à imprimer : {{image.quantity}}</p>
+          <p>date : {{ image.date}}
 
           <button (click) = "printImage(image.id)" class="btn btn-info float-right" style="margin-left: 10px">ouvrir</button>
           </p>
