--- a/front/Front3DePrint/src/app/files/print-image/print-image.component.html
+++ b/front/Front3DePrint/src/app/files/print-image/print-image.component.html
@@ -1,28 +1,36 @@
 <div class="col-10 p-0 fond">
-	<div class="card-header">Nom de l'image : {{ imageName }}</div>
-	<div class="card-header">Nom du client : {{ userName }}</div>
-	<div class="card-header">Id du client : {{ idClient }}</div>
-	<div class="card-header">Quantité à imprimer : {{ quantity }}</div>
 	<form [formGroup]="editForm" (ngSubmit)="onSubmit()">       
 	</form>
-	<input class="mr-1 col-2" placeholder="heure(s)" [(ngModel)]="heure" id="heure">
-	<input class="mr-1 col-2" placeholder="minute(s)" [(ngModel)]="minute" id="minute">
-	<input class="mr-1 col-2" placeholder="seconde(s)" [(ngModel)]="seconde" id="seconde">
+	<input class="mr-1 col-2" placeholder="heure(s)" [(ngModel)]="heure" id="heure" required>
+	<input class="mr-1 col-2" placeholder="minute(s)" [(ngModel)]="minute" id="minute" required>
+	<input class="mr-1 col-2" placeholder="seconde(s)" [(ngModel)]="seconde" id="seconde" required>
 	<button class="btn btn-dark ml-2 col-4" (click)="calculate($event)">Calcul total du temps d'impression</button>
-	<p class="time col-10">Données de temps total d'impression calculées : {{ obj["h"] }} {{ obj["m"] }} {{ obj["s"] }}</p>
+
 	<div class="form-group">
-		<form class="col-8" [formGroup]="inputForm" (ngSubmit)="onSubmit()">
+		<form [formGroup]="inputForm" (ngSubmit)="onSubmit()">
+		<p class="form-group card-header"><span>Nom de l'image : </span>
+		<input type="text" formControlName="name" name="name" class="form-control" id="name" [(ngModel)]="imageName" readonly="readonly">
+		</p>
+		<p class="form-group card-header"><span>Nom du client : </span>
+		<input type="text" formControlName="userName" name="userName" class="form-control" id="userName" placeholder="userName" placeholder="{{userName}}" readonly="readonly">
+		</p>
+		<p class="form-group card-header"><span>id du client : </span>
+		<input type="number" formControlName="customUserId" name="customUserId" class="form-control" id="customUserId" [(ngModel)]="customUserId" readonly="readonly">
+		</p>
+		<p class="form-group card-header"><span>Quantité à imprimer : </span>
+		<input type="number" formControlName="quantity" name="quantity" class="form-control" id="quantity" [(ngModel)]="quantity" readonly="readonly">
+		</p>
 			<label for="weight">Poids (grammes) :</label>
 			<div class="form-group card-header">	
-				<input type="number" formControlName="weight" name="weight" class="form-control" id="weight">
+				<input type="number" formControlName="weight" name="weight" class="form-control" id="weight" required>
 			</div>
 			<div class="form-group card-header">
 				<label for="price">Prix (€) :</label>
-				<input type="number" formControlName="price" name="price" class="form-control" id="price">
+				<input type="number" formControlName="price" name="price" class="form-control" id="price" required>
 			</div>
 			<div class="form-group card-header">
 				<label for="timeToPrint">Temps d'impression total :</label>
-				<input type="text" formControlName="timeToPrint" name="timeToPrint" class="form-control" id="timeToPrint">
+				<input type="text" formControlName="timeToPrint" name="timeToPrint" class="form-control" id="timeToPrint" [(ngModel)]="time">
 			</div>
 			<button class="btn btn-success float-right ml-2 mt-3">Ok</button>
 			<button (click) = "back()" class="btn btn-info float-right mt-3" style="margin-left: 10px"> <i class="fa fa-undo"> </i></button>
