--- a/front/Front3DePrint/src/app/files/print-image/print-image.component.html
+++ b/front/Front3DePrint/src/app/files/print-image/print-image.component.html
@@ -8,25 +8,28 @@
 
 	<div class="form-group">
 		<form [formGroup]="inputForm" (ngSubmit)="onSubmit()">
-		<p class="form-group card-header"><span>Nom de l'image : </span>
-		<input type="text" formControlName="name" name="name" class="form-control" id="name" [(ngModel)]="imageName" readonly="readonly">
-		</p>
-		<p class="form-group card-header"><span>Nom du client : </span>
-		<input type="text" formControlName="userName" name="userName" class="form-control" id="userName" placeholder="userName" placeholder="{{userName}}" readonly="readonly">
-		</p>
-		<p class="form-group card-header"><span>id du client : </span>
-		<input type="number" formControlName="customUserId" name="customUserId" class="form-control" id="customUserId" [(ngModel)]="customUserId" readonly="readonly">
-		</p>
-		<p class="form-group card-header"><span>Quantité à imprimer : </span>
-		<input type="number" formControlName="quantity" name="quantity" class="form-control" id="quantity" [(ngModel)]="quantity" readonly="readonly">
-		</p>
-			<label for="weight">Poids (grammes) :</label>
+			<p class="form-group card-header"><span>Nom de l'image : </span>
+			<input type="text" formControlName="name" name="name" class="form-control" id="name" [(ngModel)]="imageName" readonly="readonly">
+			</p>
+			<p class="form-group card-header"><span>Id de l'image : </span>
+			<input type="number" formControlName="imageId" name="imageId" class="form-control" id="imageId" [(ngModel)]="imageId" readonly="readonly">
+			</p>
+			<p class="form-group card-header"><span>Nom du client : </span>
+			<input type="text" formControlName="userName" name="userName" class="form-control" id="userName" placeholder="userName" placeholder="{{userName}}" readonly="readonly">
+			</p>
+			<p class="form-group card-header"><span>id du client : </span>
+			<input type="number" formControlName="customUserId" name="customUserId" class="form-control" id="customUserId" [(ngModel)]="customUserId" readonly="readonly">
+			</p>
+			<p class="form-group card-header"><span>Quantité à imprimer : </span>
+			<input type="number" formControlName="quantity" name="quantity" class="form-control" id="quantity" [(ngModel)]="quantity" readonly="readonly">
+			</p>
 			<div class="form-group card-header">	
-				<input type="number" formControlName="weight" name="weight" class="form-control" id="weight" required>
+				<label for="weight">Poids (grammes) :</label>
+				<input type="number" formControlName="weight" name="weight" class="form-control" id="weight" required="required">
 			</div>
 			<div class="form-group card-header">
 				<label for="price">Prix (€) :</label>
-				<input type="number" formControlName="price" name="price" class="form-control" id="price" required>
+				<input type="number" formControlName="price" name="price" class="form-control" id="price" required="required">
 			</div>
 			<div class="form-group card-header">
 				<label for="timeToPrint">Temps d'impression total :</label>
