--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
@@ -1,9 +1,9 @@
 
 <div class="row">
-  <div class="col-sm-10"><div class="card">
+  <div class="col-6"><div class="card">
 
     <div class="card-header">Liste des images à imprimer</div>
-    <p class="none" *ngIf="images.length === 0">Aucune image à imprimer</p>
+    <p class="none" *ngIf="!images">Aucune image à imprimer</p>
       <ul class="list-group list-group-flush" *ngFor="let image of images;let i=index">
         <li class="list-group-item">
           <p class="owner" *ngIf="i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName"> Client(id : {{image.userId}}) : 
@@ -18,5 +18,7 @@
       </ul>
     </div>
   </div>
-  
+   <div class="col-6"><div class="card">
+       <div class="card-header">Liste des bons de commande à valider</div>
+   </div>
 </div>
