--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.css
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.css
@@ -11,3 +11,12 @@
 .none {
     text-align: center;
 }
+
+.order {
+    color: aliceblue;
+    font-weight: bold;
+    position: relative;
+    margin: 1px;
+    padding: 0.5em 0.5em 1.5em 2em;
+    background: rgb(126, 95, 95);
+}
