--- a/front/Front3DePrint/src/app/login/login.component.html
+++ b/front/Front3DePrint/src/app/login/login.component.html
@@ -70,7 +70,7 @@
     </form>
 
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{ username }}.
+      Connecté en tant que :  {{ username }}.
     </div>
   </div>
 </div>
