--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
@@ -3,7 +3,7 @@
   <div class="col-6"><div class="card">
 
     <div class="card-header">Liste des images à imprimer</div>
-    <p class="none" *ngIf="!images">Aucune image à imprimer</p>
+    <p class="none" *ngIf="isEmptyObject(images)">Aucune image à imprimer</p>
       <ul class="list-group list-group-flush" *ngFor="let image of images;let i=index">
         <li class="list-group-item">
           <p class="owner" *ngIf="i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName"> Client(id : {{image.userId}}) : 
@@ -33,7 +33,6 @@
             <p>temps total d'impression : {{ order.timeToPrint}}</p>
             <p>Poids total : {{ order.totalWeight }} gs</p>
             <p>Prix total : {{ order.totalPrice }} €</p>
-            <p>, {{ order.id }}, {{order.status}}</p>
           </li>
         </ul>
       </form>
