--- a/front/Front3DePrint/src/app/board-user/board-user.component.html
+++ b/front/Front3DePrint/src/app/board-user/board-user.component.html
@@ -2,29 +2,22 @@
 <div class="container row">
 
 
-  <div class="col-4">
+  <div class="col-6">
   <h3 class="text-center">Devis</h3>
-    <div class="card-header">
-      devis numéro : ?
-
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Nom du modèle 3D 1</h5>
-          <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Nom du modèle 3D 2</h5>
-          <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
-        </div>
-      </div>
-      <p>Prix total de la commande : ?</p>
-      <button class="badge badge-success mr-2" (click)="acceptCommande()">Valider la commande</button>
-      <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
+    <div class="card-header">Liste des devis à envoyer</div>
+      <p class="none" *ngIf="isEmptyObject(orders)">Aucun devis</p>
+      <ul class="list-group list-group-flush" *ngFor="let order of orders;let i=index">
+      <li class="list-group-item">
+      <p> Impression : {{order.name}}</p>
+      <p>Quantité à imprimer : {{order.quantity}}</p>
+      <p>temps total d'impression : {{ order.timeToPrint}}</p>
+      <p>Poids total : {{ order.totalWeight }} grs</p>
+      <p>Prix total : {{ order.totalPrice }} €</p>
+      <button (click) = "annulOrder(order.id, order.imageId)" class="btn btn-danger float-right" style="margin-left: 10px">Annuller</button>
+      </li>
+      </ul>
     </div>
-  </div>
-  <div class="col-4">
+  <div class="col-6">
   <h3 class="text-center">Commandes</h3>
     <div class="card-header">
       Commande
@@ -36,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-12">
   <h3 class="text-center">Historique</h3>
       <div class="card-header">
       Anciennes commandes
