--- a/front/Front3DePrint/src/app/board-user/board-user.component.html
+++ b/front/Front3DePrint/src/app/board-user/board-user.component.html
@@ -4,19 +4,22 @@
 
   <div class="col-6">
   <h3 class="text-center">Devis</h3>
-    <div class="card-header">Liste des devis à envoyer</div>
-      <p class="none" *ngIf="isEmptyObject(orders)">Aucun devis</p>
-      <ul class="list-group list-group-flush" *ngFor="let order of orders;let i=index">
+  <div class="card-header">Liste de vos devis à valider et envoyer</div>
+    <p class="none" *ngIf="isEmptyObject(orders)">Aucun devis</p>
+    <ul class="list-group list-group-flush" *ngFor="let order of orders;let i=index">
       <li class="list-group-item">
-      <p> Impression : {{order.name}}</p>
-      <p>Quantité à imprimer : {{order.quantity}}</p>
-      <p>temps total d'impression : {{ order.timeToPrint}}</p>
-      <p>Poids total : {{ order.totalWeight }} grs</p>
-      <p>Prix total : {{ order.totalPrice }} €</p>
-      <button (click) = "annulOrder(order.id, order.imageId)" class="btn btn-danger float-right" style="margin-left: 10px">Annuller</button>
+        <p> Impression : {{order.name}}</p>
+        <p>Quantité à imprimer : {{order.quantity}}</p>
+        <p>temps total d'impression : {{ order.timeToPrint}}</p>
+        <p>Poids total : {{ order.totalWeight }} grs</p>
+        <p>Prix total : {{ order.totalPrice }} €</p>
+        <button (click) = "annulOrder(order.id, order.imageId)" class="btn btn-danger float-right" style="margin-left: 10px">Annuller</button>
       </li>
-      </ul>
+    </ul>
+    <div *ngIf="!isEmptyObject(orders)">
+    <button (click) = "createBill()" class="btn btn-success float-right" style="margin-left: 10px">Valider le devis</button>
     </div>
+  </div>
   <div class="col-6">
   <h3 class="text-center">Commandes</h3>
     <div class="card-header">
