--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
@@ -2,13 +2,13 @@
 <div class="row">
   <div class="col-6"><div class="card">
 
-    <div class="card-header">Liste des images à imprimer</div>
-    <p class="none" *ngIf="isEmptyObject(images)">Aucune image à imprimer</p>
+    <div class="card-header">Liste des objets à imprimer</div>
+    <p class="none" *ngIf="isEmptyObject(images)">Aucun objet à imprimer</p>
       <ul class="list-group list-group-flush" *ngFor="let image of images;let i=index">
         <li class="list-group-item">
           <p class="owner" *ngIf="i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName"> Client(id : {{image.userId}}) : 
           {{i>0 && images[i-1].ownerName==image.ownerName?'':image.ownerName}}</p>
-          <p> image : {{i>0 && images[i-1].name==image.name?'':image.name}}</p>
+          <p> Objet : {{i>0 && images[i-1].name==image.name?'':image.name}}</p>
           <p>Quantité à imprimer : {{image.quantity}}</p>
           <p>date : {{ image.date}}
 
