--- a/front/Front3DePrint/src/app/board-admin/board-admin.component.css
+++ b/front/Front3DePrint/src/app/board-admin/board-admin.component.css
@@ -3,3 +3,26 @@ span {
     font: bolder;
     font-style: italic;
 }
+
+.owner {
+    font-weight: bold;
+    position: relative;
+    margin: 1px;
+    padding: 0.5em 0.5em 0.5em 2em;
+    background: lightgrey;
+}
+
+.owner::first-line {}
+
+.none {
+    text-align: center;
+}
+
+.order {
+    color: aliceblue;
+    font-weight: bold;
+    position: relative;
+    margin: 1px;
+    padding: 0.5em 0.5em 1.5em 2em;
+    background: rgb(126, 95, 95);
+}
