--- a/front/Front3DePrint/src/app/files/print-image/print-image.component.html
+++ b/front/Front3DePrint/src/app/files/print-image/print-image.component.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="form-group card-header">
 				<label for="timeToPrint">Temps d'impression total :</label>
-				<input type="text" formControlName="timeToPrint" name="timeToPrint" class="form-control" id="timeToPrint" [(ngModel)]="time">
+				<input type="text" formControlName="timeToPrint" name="timeToPrint" class="form-control" id="timeToPrint" [(ngModel)]="time" readonly="readonly">
 			</div>
 			<button class="btn btn-success float-right ml-2 mt-3">Ok</button>
 			<button (click) = "back()" class="btn btn-info float-right mt-3" style="margin-left: 10px"> <i class="fa fa-undo"> </i></button>
