--- a/front/Front3DePrint/src/app/board-admin/board-admin.component.html
+++ b/front/Front3DePrint/src/app/board-admin/board-admin.component.html
@@ -1,14 +1,14 @@
-
 <div class="container row">
 
-<div class="col-6">
-  <h3 class="text-center">Devis</h3>
-  <div class="card-header">Liste de vos devis à valider et envoyer</div>
+  <div class="col-6">
+    <h3 class="text-center">Devis</h3>
+    <div class="card-header">Liste de vos devis à valider</div>
     <p class="none" *ngIf="isEmptyObject(orders)">Aucun devis</p>
-   <ul class="list-group list-group-flush" *ngFor="let order of orders;let i=index">
+    <ul class="list-group list-group-flush" *ngFor="let order of orders;let i=index">
       <li class="list-group-item">
-        <p class="owner" *ngIf="i>0 && orders[i-1].customUser.id==order.customUser.id?'':order.customUser.id"> Devis du client : 
-        {{ order.customUser.id}}
+        <p class="owner" *ngIf="i>0 && orders[i-1].customUser.id==order.customUser.id?'':order.customUser.id"> Devis du
+          client :
+          {{ order.customUser.id}}
         </p>
         <p>{{ order.customUser.id}}</p>
         <p> Impression : {{i>0 && orders[i-1].name==order.name?'':order.name}}</p>
@@ -16,35 +16,37 @@
         <p>temps total d'impression : {{ order.timeToPrint}}</p>
         <p>Poids total : {{ order.totalWeight }} gs</p>
         <p>Prix total : {{ order.totalPrice }} €</p>
-        <div class="order" *ngIf="i>0 && orders[i-1].customUser.id==order.customUser.id; then button else nothing"> Devis du client : 
-        {{ order.customUser.id}}</div>
+        <div class="order" *ngIf="i>0 && orders[i-1].customUser.id==order.customUser.id; then button else nothing">
+          Devis du client :
+          {{ order.customUser.id}}</div>
         <ng-template #button>
-        <button (click) = "validateOrder(order.customUser.id, order.status)" class="btn btn-info float-right" style="margin-left: 10px">Générer facture</button>
-        <p class="eol" ><br/></p>
+          <button (click)="createBill(order.customUser.id)" class="btn btn-info float-right"
+            style="margin-left: 10px">Générer facture</button>
+          <p class="eol"><br /></p>
         </ng-template>
-       
+
       </li>
-      </ul>
-   </div>
+    </ul>
+  </div>
 
-  <div class="card">
-    <div class="card-header">
-     Liste des factures à valider
-    </div>
-      <p class="none" *ngIf="isEmptyObject(bills)">Aucun devis</p>
+  <div class="col-6">
+    <h3 class="text-center">Factures</h3>
+    <div class="card-header">Liste des factures</div>
+    <p class="none" *ngIf="isEmptyObject(bills)">Aucun devis</p>
 
-      <ul class="card list-group list-group-flush" *ngFor="let bill of bills">
-          <li class="card-body list-group-item">
-            <h5 class="card-title">Facture N° {{ bill.id }}</h5>
-            <p class="card-text">Nom : {{ bill.customUser.firstname }} {{ bill.customUser.lastname }} / Email : {{bill.customUser.email}}</p>
-            <p class="card-text">Addresse : {{ bill.customUser.address.num }}, {{ bill.customUser.address.street }} - {{ bill.customUser.address.town }} {{ bill.customUser.address.postal }}</p>
-            <span>(En cours à valider) </span>
-            <button class="badge badge-success mr-2" (click)="validateCommande()">Valider la commande</button>
-            <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
-          </li>
-      </ul>
+    <ul class="card list-group list-group-flush" *ngFor="let bill of bills">
+      <li class="card-body list-group-item">
+        <h5 class="card-title">Facture N° {{ bill.id }}</h5>
+        <p class="card-text">Nom : {{ bill.customUser.firstname }} {{ bill.customUser.lastname }} / Email :
+          {{bill.customUser.email}}</p>
+        <p class="card-text">Addresse : {{ bill.customUser.address.num }}, {{ bill.customUser.address.street }} -
+          {{ bill.customUser.address.town }} {{ bill.customUser.address.postal }}</p>
+        <span>(En cours à valider) </span>
+        <button class="badge badge-success mr-2" (click)="validateCommande()">Valider la commande</button>
+        <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
+      </li>
+    </ul>
 
- 
   </div>
 
 </div>
