--- a/front/Front3DePrint/src/app/board-user/board-user.component.html
+++ b/front/Front3DePrint/src/app/board-user/board-user.component.html
@@ -13,7 +13,7 @@
         <p>temps total d'impression : {{ order.timeToPrint}}</p>
         <p>Poids total : {{ order.totalWeight }} grs</p>
         <p>Prix total : {{ order.totalPrice }} €</p>
-        <button (click) = "validateOrder(order.id)" class="btn btn-success float-right" style="margin-left: 10px">Accepter</button>
+        <button (click) = "validateOrder(order.id, order.imageId)" class="btn btn-success float-right" style="margin-left: 10px">Accepter</button>
         <button (click) = "annulOrder(order.id, order.imageId)" class="btn btn-danger float-right" style="margin-left: 10px">Annuller</button>
       </li>
     </ul>
