--- a/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
+++ b/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
@@ -16,7 +16,7 @@
   </label>
 </div>
 <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
-  <i class="fa fa-download" aria-hidden="true"></i>
+  <i class="fa fa-download" aria-hidden="true"> (enregistrer l'image)</i>
 </button>
 
 <div class="alert alert-light" role="alert">{{ message }}</div>
